# speckle-automate-data-shield

./: .gitignore  DEVELOPER_README.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: actions.py  function.py  inputs.py  rule_processor.py
src/data-shield/: actions.py  function.py  rules.py  traversal.py
src/data_shield/: __init__.py  actions.py  function.py  helpers.py  inputs.py  matchers.py  rules.py  traversal.py
tests/: test_function.py
